Fix h2 bottom border
Altered the rotated element back to the image
rather than its container. So the dotted border
above wasn't invisible where it met container box.

Repositioned related text.

--- a/flexbox.html
+++ b/flexbox.html
@@ -139,15 +139,15 @@
           </div>
         </div>
         <h2>Block C</h2>
-        <div class="container blockC rotate90">
+        <div class="container blockC">
           <img
             src="Images/organ-min.jpg"
             alt="organ under a vaulted ceiling"
             width="500px"
             height="900px"
-            class="organ"
+            class="organ rotate90"
           />
-          <p class="rotateBack">Dealing with a rotated image</p>
+          <p class="organP">Dealing with a rotated image</p>
         </div>
       </div>
       <footer>
