Add second page
Navigation to and from page 2.
Content page 2.

--- a/flexbox.html
+++ b/flexbox.html
@@ -8,12 +8,23 @@
   </head>
   <body>
     <div class="container content">
-      <div class="banner">
-        <img
-          src="Images/bannerDims-min.jpg"
-          alt="stylish modern interior"
-          class="bannerImg"
-        />
+      <div class="bannerContainer">
+        <div class="banner">
+          <img
+            src="Images/bannerDims-min.jpg"
+            alt="stylish modern interior"
+            class="bannerImg"
+          />
+          <div class="bannerTextBox box1">
+            <a href="flex2.html" class="bannerText">Flex Grow/Shrink</a>
+          </div>
+          <div class="bannerTextBox box2">
+            <a href="flex3.html" class="bannerText">page3 Temp</a>
+          </div>
+          <div class="bannerTextBox box3">
+            <a href="flex4.html" class="bannerText">page4 Temp</a>
+          </div>
+        </div>
       </div>
       <header>
         <div class="container header">
