Add nav to home page

--- a/flex2.html
+++ b/flex2.html
@@ -33,7 +33,7 @@
       </div>
       <footer>
         <p>Using margin auto to assign empty space.</p>
-        <div class="nav">
+        <div class="nav flex2">
           <ul>
             <li class="marginRight">Nav Here -></li>
             <li><a href="flexbox.html">Home</a></li>
