--- a/flexbox.html
+++ b/flexbox.html
@@ -176,6 +176,14 @@
             class="sixties"
           />
         </div>
+        <nav class="nav page1">
+          <ul>
+            <li><a href="#">Back to top</a></li>
+            <li><a href="flex2.html">Flex Grow/Shrink</a></li>
+            <li><a href="flex3.html">Page3 Temp</a></li>
+            <li><a href="flex4.html">Page4 Temp</a></li>
+          </ul>
+        </nav>
       </footer>
     </div>
   </body>
