--- a/flex2.html
+++ b/flex2.html
@@ -17,7 +17,11 @@
         flex-grow and flex-shrink.
       </p>
       <h2 id="subTitleFlex2">A form that gives four layouts</h2>
-      <p>Depending on the size of the page the form wraps. The space given to email increases more than the other two elements as email addresses are usually longer.</p>
+      <p>
+        Depending on the size of the page, the form wraps. The space given to
+        email increases more than the other two elements as email addresses are
+        usually longer. Set this up with flex: 2;
+      </p>
       <div class="formContainer">
         <form action="details">
           <div>
