--- a/flexbox.html
+++ b/flexbox.html
@@ -7,158 +7,160 @@
     <title>Flexbox Playground</title>
   </head>
   <body>
-    <div class="container content">
-      <div class="bannerContainer">
-        <div class="banner">
-          <img
-            src="Images/bannerDims-min.jpg"
-            alt="stylish modern interior"
-            class="bannerImg"
-          />
-          <div class="bannerTextBox box1">
-            <a href="flex2.html" class="bannerText">Flex Grow/Shrink</a>
-          </div>
-          <div class="bannerTextBox box2">
-            <a href="flex3.html" class="bannerText">page3 Temp</a>
-          </div>
-          <div class="bannerTextBox box3">
-            <a href="flex4.html" class="bannerText">page4 Temp</a>
-          </div>
-        </div>
-      </div>
-      <header>
-        <div class="container header">
-          <div class="container header1">
+    <div class="contentContainer">
+      <div class="content">
+        <div class="bannerContainer">
+          <div class="banner">
             <img
-              src="Images/venetianBlinds-min.jpg"
-              alt="Building with wooden shutters"
-              width="200"
-              height="200"
+              src="Images/bannerDims-min.jpg"
+              alt="stylish modern interior"
+              class="bannerImg"
             />
-          </div>
-          <div class="container header2"><h1>Flexbox Playground</h1></div>
-          <div class="container header3">
-            <img
-              src="Images/stylish-min.jpg"
-              alt="Modern building exterior"
-              width="350"
-              height="200"
-            />
-          </div>
-          <div class="container header4">
-            <img
-              src="Images/knocker-min.jpg"
-              alt="Brass door knocker"
-              width="200"
-              height="200"
-            />
-          </div>
-        </div>
-      </header>
-      <div class="container main">
-        <h2>Block A</h2>
-        <p>Hidden Scroll Bar when too large</p>
-        <div class="container blockA">
-          <div class="blockA1">
-            <img
-              src="Images/warmAlley-min.jpg"
-              alt="warm alley"
-              width="250"
-              height="350"
-            />
-          </div>
-          <div class="blockA2">
-            <img
-              src="Images/stylishSubway-min.jpg"
-              alt="stylish subway"
-              width="250"
-              height="350"
-            />
-          </div>
-          <div class="blockA3">
-            <img
-              src="Images/slum-min.jpg"
-              alt="worn down mediterranean hillside town"
-              width="250"
-              height="350"
-            />
-          </div>
-          <div class="blockA4">
-            <img
-              src="Images/graffiti-min.jpg"
-              alt="graffiti"
-              width="250"
-              height="350"
-            />
-          </div>
-          <div class="blockA5">
-            <img
-              src="Images/peekingChurch-min.jpg"
-              alt="Church looming behind colourful buildings"
-              width="250"
-              height="350"
-            />
-          </div>
-        </div>
-        <h2>Block B</h2>
-        <div class="container blockB">
-          <div class="blockB1">
-            <img
-              src="Images/russian-min.jpg"
-              alt="domed building"
-              width="370"
-              height="570"
-            />
-          </div>
-          <div class="blockB2">
-            <div class="topRow">
-              <div class="blockB2a">
-                <img
-                  src="Images/curvedLight-min.jpg"
-                  alt="beautiful modern window"
-                  width="120"
-                  height="220"
-                />
-              </div>
-              <div class="blockB2b">
-                <img
-                  src="Images/modernLibrary-min.jpg"
-                  alt="Modern Library"
-                  width="120"
-                  height="220"
-                />
-              </div>
+            <div class="bannerTextBox box1">
+              <a href="flex2.html" class="bannerText">Flex Grow/Shrink</a>
             </div>
-            <div class="bottomRow">
-              <div class="blockB2c">
-                <img
-                  src="Images/eiffel-min.jpg"
-                  alt="eiffel tower from below"
-                  width="120"
-                  height="220"
-                />
-              </div>
-              <div class="blockB2d">
-                <img
-                  src="Images/coldStair-min.jpg"
-                  alt="wide communal space in city"
-                  width="120"
-                  height="220"
-                />
-              </div>
+            <div class="bannerTextBox box2">
+              <a href="flex3.html" class="bannerText">page3 Temp</a>
+            </div>
+            <div class="bannerTextBox box3">
+              <a href="flex4.html" class="bannerText">page4 Temp</a>
             </div>
           </div>
         </div>
-        <h2>Block C</h2>
-        <div class="container blockC">
-          <img
-            src="Images/organ-min.jpg"
-            alt="organ under a vaulted ceiling"
-            width="500px"
-            height="900px"
-            class="organ rotate90"
-          />
-          <p class="organP">Dealing with a rotated image</p>
+        <header>
+          <div class="container header">
+            <div class="container header1">
+              <img
+                src="Images/venetianBlinds-min.jpg"
+                alt="Building with wooden shutters"
+                width="200"
+                height="200"
+              />
+            </div>
+            <div class="container header2"><h1>Flexbox Playground</h1></div>
+            <div class="container header3">
+              <img
+                src="Images/stylish-min.jpg"
+                alt="Modern building exterior"
+                width="350"
+                height="200"
+              />
+            </div>
+            <div class="container header4">
+              <img
+                src="Images/knocker-min.jpg"
+                alt="Brass door knocker"
+                width="200"
+                height="200"
+              />
+            </div>
+          </div>
+        </header>
+        <div class="container main">
+          <h2>Block A</h2>
+          <p>Hidden Scroll Bar when too large</p>
+          <div class="container blockA">
+            <div class="blockA1">
+              <img
+                src="Images/warmAlley-min.jpg"
+                alt="warm alley"
+                width="250"
+                height="350"
+              />
+            </div>
+            <div class="blockA2">
+              <img
+                src="Images/stylishSubway-min.jpg"
+                alt="stylish subway"
+                width="250"
+                height="350"
+              />
+            </div>
+            <div class="blockA3">
+              <img
+                src="Images/slum-min.jpg"
+                alt="worn down mediterranean hillside town"
+                width="250"
+                height="350"
+              />
+            </div>
+            <div class="blockA4">
+              <img
+                src="Images/graffiti-min.jpg"
+                alt="graffiti"
+                width="250"
+                height="350"
+              />
+            </div>
+            <div class="blockA5">
+              <img
+                src="Images/peekingChurch-min.jpg"
+                alt="Church looming behind colourful buildings"
+                width="250"
+                height="350"
+              />
+            </div>
+          </div>
+          <h2>Block B</h2>
+          <div class="container blockB">
+            <div class="blockB1">
+              <img
+                src="Images/russian-min.jpg"
+                alt="domed building"
+                width="370"
+                height="570"
+              />
+            </div>
+            <div class="blockB2">
+              <div class="topRow">
+                <div class="blockB2a">
+                  <img
+                    src="Images/curvedLight-min.jpg"
+                    alt="beautiful modern window"
+                    width="120"
+                    height="220"
+                  />
+                </div>
+                <div class="blockB2b">
+                  <img
+                    src="Images/modernLibrary-min.jpg"
+                    alt="Modern Library"
+                    width="120"
+                    height="220"
+                  />
+                </div>
+              </div>
+              <div class="bottomRow">
+                <div class="blockB2c">
+                  <img
+                    src="Images/eiffel-min.jpg"
+                    alt="eiffel tower from below"
+                    width="120"
+                    height="220"
+                  />
+                </div>
+                <div class="blockB2d">
+                  <img
+                    src="Images/coldStair-min.jpg"
+                    alt="wide communal space in city"
+                    width="120"
+                    height="220"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <h2>Block C</h2>
+          <div class="container blockC">
+            <img
+              src="Images/organ-min.jpg"
+              alt="organ under a vaulted ceiling"
+              width="500px"
+              height="900px"
+              class="organ rotate90"
+            />
+            <p class="organP">Dealing with a rotated image</p>
+          </div>
         </div>
       </div>
       <footer>
